--- a/index.html
+++ b/index.html
@@ -1109,8 +1109,10 @@
 					<script type="text/template">
 						## conclusion
 
-						* monad is not kind of a magic it is just another way for abstraction i.e. design pattern
-						* monad 在有强大类型系统支持和模式匹配这样的原语支持的时候才能发挥真正的威力 让代码可以简洁的不要不要的
+						* Monad is not kind of a magic it is just another way for abstraction i.e. design pattern
+						* Monad 在有强大类型系统支持和模式匹配这样的原语支持的时候才能发挥真正的威力 让代码可以简洁的不要不要的
+						* 没有Monad在pure fp中很多事情将会变得很麻烦 比如IO 比如Concurrency 因为代码本生并没有明确的先后执行顺序 如果可以包在Monad中用类似cps风格的写法就可以让这些东西在pure world中也能变得很优雅
+						* 一生二 二生三 三生万物 (comb)
 						* 没有银弹 不要中二
 					</script>
 				</section>
